background: Fix memory leak in the picture sources

The list store was taking a reference to the background item,
so we need to unref it on our side to avoid leaking it.

https://bugzilla.gnome.org/show_bug.cgi?id=709243